--- a/Layouts/Level1.xml
+++ b/Layouts/Level1.xml
@@ -291,7 +291,7 @@
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
-                        <opacity>1</opacity>
+                        <opacity>0</opacity>
                     </world>
                 </instance>
                 <instance type="TilePavimento" uid="148">
@@ -507,11 +507,13 @@
                         <Special_Max>130</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
+                        <IsStunned>false</IsStunned>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
                         <behavior-instance type="DestroyOutsideLayout" />
                         <behavior-instance type="Timer" />
+                        <behavior-instance type="Flash" />
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -570,11 +572,13 @@
                         <Special_Max>130</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
+                        <IsStunned>false</IsStunned>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
                         <behavior-instance type="DestroyOutsideLayout" />
                         <behavior-instance type="Timer" />
+                        <behavior-instance type="Flash" />
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -608,11 +612,13 @@
                         <Special_Max>130</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
+                        <IsStunned>false</IsStunned>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
                         <behavior-instance type="DestroyOutsideLayout" />
                         <behavior-instance type="Timer" />
+                        <behavior-instance type="Flash" />
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -646,11 +652,13 @@
                         <Special_Max>130</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
+                        <IsStunned>false</IsStunned>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
                         <behavior-instance type="DestroyOutsideLayout" />
                         <behavior-instance type="Timer" />
+                        <behavior-instance type="Flash" />
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -1810,8 +1818,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>2421</x>
-                        <y>-410</y>
+                        <x>1880</x>
+                        <y>-130</y>
                         <z>0</z>
                         <width>262</width>
                         <height>127</height>
@@ -1819,7 +1827,7 @@
                         <hotspotX>0</hotspotX>
                         <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
-                        <opacity>1</opacity>
+                        <opacity>0</opacity>
                     </world>
                 </instance>
                 <instance type="AlienBlue_AttackCollider" uid="3">
@@ -1838,16 +1846,16 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>2823</x>
-                        <y>-394</y>
+                        <x>1881</x>
+                        <y>-302</y>
                         <z>0</z>
-                        <width>165</width>
+                        <width>197</width>
                         <height>131</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
-                        <opacity>1</opacity>
+                        <opacity>0</opacity>
                     </world>
                 </instance>
             </instances>
@@ -2210,8 +2218,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>125</x>
-                        <y>-1125</y>
+                        <x>120</x>
+                        <y>-1150</y>
                         <z>0</z>
                         <width>1000</width>
                         <height>250</height>
