--- a/Layouts/Level1.xml
+++ b/Layouts/Level1.xml
@@ -1858,6 +1858,31 @@
                         <opacity>0</opacity>
                     </world>
                 </instance>
+                <instance type="ArcadeCabinato_AttackCollider" uid="68">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <PlayerNumber>0</PlayerNumber>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1856</x>
+                        <y>-403</y>
+                        <z>0</z>
+                        <width>317</width>
+                        <height>161</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>0</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
