Added Bullet behavior.

--- a/Layouts/Level1.xml
+++ b/Layouts/Level1.xml
@@ -1294,6 +1294,9 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <Damage>3</Damage>
+                    </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="Bullet">
                             <properties>
@@ -1314,10 +1317,10 @@
                         <y>-500</y>
                         <z>0</z>
                         <width>88.38835144</width>
-                        <height>353.553405762</height>
+                        <height>441.941772461</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
-                        <hotspotY>1</hotspotY>
+                        <hotspotY>0.800000012</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
