Sostituito tutte le animazioni del boss in codice e scritta la funzione che gestisce i danni presi dal boss

--- a/Layouts/Level1_Boss.xml
+++ b/Layouts/Level1_Boss.xml
@@ -914,9 +914,10 @@
                         <PlayerY>0</PlayerY>
                         <RangedAimTimer>2</RangedAimTimer>
                         <Spit>false</Spit>
-                        <MeleeHit>false</MeleeHit>
+                        <SpecialPointGivenWhenHit>5</SpecialPointGivenWhenHit>
                         <RobotteWaveAttack>14</RobotteWaveAttack>
                         <RobotteRangedAttack>10</RobotteRangedAttack>
+                        <IsStunned>false</IsStunned>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
