--- a/Layouts/Level1_Boss.xml
+++ b/Layouts/Level1_Boss.xml
@@ -541,15 +541,16 @@
                     </properties>
                     <instance-variables>
                         <PlayerNumber>1</PlayerNumber>
-                        <PlayerHP>75</PlayerHP>
+                        <PlayerHP>50</PlayerHP>
                         <PlayerDMG>1</PlayerDMG>
                         <Special>0</Special>
                         <PlayerHitsCount>0</PlayerHitsCount>
-                        <PlayerHP_Max>75</PlayerHP_Max>
+                        <PlayerHP_Max>50</PlayerHP_Max>
                         <Special_Max>130</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
+                        <Special_DMG>2</Special_DMG>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
@@ -581,15 +582,16 @@
                     </properties>
                     <instance-variables>
                         <PlayerNumber>2</PlayerNumber>
-                        <PlayerHP>75</PlayerHP>
+                        <PlayerHP>50</PlayerHP>
                         <PlayerDMG>1</PlayerDMG>
                         <Special>0</Special>
                         <PlayerHitsCount>0</PlayerHitsCount>
-                        <PlayerHP_Max>75</PlayerHP_Max>
-                        <Special_Max>130</Special_Max>
+                        <PlayerHP_Max>50</PlayerHP_Max>
+                        <Special_Max>45</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
+                        <Special_DMG>5</Special_DMG>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
@@ -621,15 +623,16 @@
                     </properties>
                     <instance-variables>
                         <PlayerNumber>3</PlayerNumber>
-                        <PlayerHP>75</PlayerHP>
+                        <PlayerHP>50</PlayerHP>
                         <PlayerDMG>1</PlayerDMG>
                         <Special>0</Special>
                         <PlayerHitsCount>0</PlayerHitsCount>
-                        <PlayerHP_Max>75</PlayerHP_Max>
+                        <PlayerHP_Max>50</PlayerHP_Max>
                         <Special_Max>130</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
+                        <Special_DMG>0</Special_DMG>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
@@ -661,15 +664,16 @@
                     </properties>
                     <instance-variables>
                         <PlayerNumber>3</PlayerNumber>
-                        <PlayerHP>75</PlayerHP>
+                        <PlayerHP>50</PlayerHP>
                         <PlayerDMG>1</PlayerDMG>
                         <Special>0</Special>
                         <PlayerHitsCount>0</PlayerHitsCount>
-                        <PlayerHP_Max>75</PlayerHP_Max>
+                        <PlayerHP_Max>50</PlayerHP_Max>
                         <Special_Max>130</Special_Max>
                         <PlayerHitsCount_Max>3</PlayerHitsCount_Max>
                         <HasHitSomeone>false</HasHitSomeone>
                         <IsStunned>false</IsStunned>
+                        <Special_DMG>2</Special_DMG>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="PinToCollider" />
