--- a/Layouts/Level1_Boss.xml
+++ b/Layouts/Level1_Boss.xml
@@ -74,6 +74,84 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="Kapow" uid="327">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <EnemyUID>0</EnemyUID>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="Sine">
+                            <properties>
+                                <active-on-start>Yes</active-on-start>
+                                <movement>Size</movement>
+                                <wave>Sine</wave>
+                                <period>1</period>
+                                <period-random>0</period-random>
+                                <period-offset>0.75</period-offset>
+                                <period-offset-random>0</period-offset-random>
+                                <magnitude>80</magnitude>
+                                <magnitude-random>0</magnitude-random>
+                            </properties>
+                        </behavior-instance>
+                        <behavior-instance type="Timer" />
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>-71</x>
+                        <y>-693</y>
+                        <z>0</z>
+                        <width>183.871994019</width>
+                        <height>113.94883728</height>
+                        <depth>0</depth>
+                        <hotspotX>0.492957741</hotspotX>
+                        <hotspotY>1.818181872</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="ArcadeCabinatoAttackGlove" uid="328">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <PlayerNumber>0</PlayerNumber>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="Bullet">
+                            <properties>
+                                <speed>100</speed>
+                                <acceleration>0</acceleration>
+                                <gravity>0</gravity>
+                                <bounce-off-solids>No</bounce-off-solids>
+                                <set-angle>No</set-angle>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1885</x>
+                        <y>-599</y>
+                        <z>0</z>
+                        <width>375</width>
+                        <height>375</height>
+                        <depth>0</depth>
+                        <hotspotX>0.125</hotspotX>
+                        <hotspotY>1</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
@@ -705,9 +783,9 @@
                         <collisions>Enabled</collisions>
                     </properties>
                     <instance-variables>
-                        <RobotteHP_Max>30</RobotteHP_Max>
-                        <RobotteHp>30</RobotteHp>
-                        <RobotteMeleeAttack>7</RobotteMeleeAttack>
+                        <RobotteHP_Max>60</RobotteHP_Max>
+                        <RobotteHp>60</RobotteHp>
+                        <RobotteMeleeAttack>10</RobotteMeleeAttack>
                         <MeleeTimer>0</MeleeTimer>
                         <RangedTimer>4</RangedTimer>
                         <AimTimer>2</AimTimer>
@@ -717,7 +795,7 @@
                         <RangedAimTimer>2</RangedAimTimer>
                         <Spit>false</Spit>
                         <SpecialPointGivenWhenHit>5</SpecialPointGivenWhenHit>
-                        <RobotteWaveAttack>14</RobotteWaveAttack>
+                        <RobotteWaveAttack>30</RobotteWaveAttack>
                         <RobotteRangedAttack>10</RobotteRangedAttack>
                         <IsStunned>false</IsStunned>
                     </instance-variables>
